Add get last reservation
