# src/controllers/reservation.controller.ts
@@ -1,6 +1,7 @@
 import { NextFunction, Request, Response } from 'express';
 import { HttpException } from '~/exceptions/HttpException';
 import { Reservation, TReservation } from '~/models/reservation.model';
+import { TSpot } from '~/models/spot.model';
 import ReservationService from '~/services/reservation.service';
 import SpotService from '~/services/spot.service';
 import UserService from '~/services/user.service';
@@ -31,23 +32,34 @@ class ReservationsController {
         }
     };
 
-    public getReservationByUser = async (req: Request, res: Response, next: NextFunction) => {
+    public getLastReservationByUser = async (req: Request, res: Response, next: NextFunction) => {
         try {
             const username: string = req.params.username;
-            const findOneReservationData: TReservation = await this.reservationService.findReservationByUser(username);
+            const findReservationData: TReservation = await this.reservationService.findLastReservationByUser(username);
 
-            res.status(200).json({ data: findOneReservationData, message: 'findByUser' });
+            res.status(200).json({ data: findReservationData, message: 'findLastReservationByUser' });
         } catch (error) {
             next(error);
         }
     };
 
-    public getReservationBySpot = async (req: Request, res: Response, next: NextFunction) => {
+    public getReservationsByUser = async (req: Request, res: Response, next: NextFunction) => {
+        try {
+            const username: string = req.params.username;
+            const findReservationsData: TReservation[] = await this.reservationService.findReservationsByUser(username);
+
+            res.status(200).json({ data: findReservationsData, message: 'findAllReservationByUser' });
+        } catch (error) {
+            next(error);
+        }
+    };
+
+    public getReservationsBySpot = async (req: Request, res: Response, next: NextFunction) => {
         try {
             const spotId: string = req.params.spotId;
-            const findOneReservationData: TReservation = await this.reservationService.findReservationBySpot(spotId);
+            const findReservationsData: TReservation[] = await this.reservationService.findReservationsBySpot(spotId);
 
-            res.status(200).json({ data: findOneReservationData, message: 'findBySpot' });
+            res.status(200).json({ data: findReservationsData, message: 'findAllReservationBySpot' });
         } catch (error) {
             next(error);
         }
@@ -58,7 +70,7 @@ class ReservationsController {
             const reservationData: TReservation = req.body;
 
             await this.userService.findUserByUsername(reservationData.user);
-            await this.spotService.findSpotById(reservationData.spot);
+            await this.spotService.findSpotById(reservationData.spot.toString());
 
             const createReservationData: TReservation = await this.reservationService.createReservation(reservationData);
 
@@ -74,7 +86,7 @@ class ReservationsController {
             const reservationData: TReservation = req.body;
 
             if (reservationData.user) await this.userService.findUserByUsername(reservationData.user);
-            if (reservationData.spot) await this.spotService.findSpotById(reservationData.spot);
+            if (reservationData.spot) await this.spotService.findSpotById(reservationData.spot.toString());
 
             const updateReservationData: TReservation = await this.reservationService.updateReservation(reservationId, reservationData);
 
